--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pc-render",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://brandonkylely.github.io/r3f-pc-demo",
   "type": "module",
   "scripts": {
     "dev": "vite",
