--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@react-three/fiber": "^8.16.8",
     "leva": "^0.9.35",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
